--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "angular": "1.5.8",
     "angular-ui-router": "^0.4.0",
+    "bootstrap": "^3.3.7",
     "jquery": "3.1.0",
     "lodash": "^4.17.2"
   },
