--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "angular": "1.5.8",
     "angular-ui-router": "^0.4.0",
     "bootstrap": "^3.3.7",
+    "font-awesome": "^4.7.0",
     "jquery": "3.1.0",
-    "lodash": "^4.17.2"
+    "lodash": "^4.17.4"
   },
   "devDependencies": {
     "babel-plugin-angularjs-annotate": "^0.6.0",
@@ -31,7 +32,7 @@
     "load-grunt-tasks": "^3.5.2",
     "time-grunt": "^1.4.0"
   },
-   "scripts": {
+  "scripts": {
     "start": "grunt dev"
   }
 }
